Quick fix: Fix scrollbar abscence in -webkit- related browsers

--- a/source/theme/globals.css
+++ b/source/theme/globals.css
@@ -24,8 +24,4 @@ body {
     & section {
         width: 100%;
     }
-
-    &::-webkit-scrollbar {
-        display: none;
-    }
 }
